# ai

./: .gitignore  README.md
app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
app/src/: index.html  styles.scss
app/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
app/src/app/core/animation/: animations.ts
app/src/app/core/interfaces/: auth.interface.ts
app/src/app/core/services/: auth.service.ts  rate.service.ts
app/src/app/modules/auth/: auth-login.guard.ts  auth.component.html  auth.component.scss  auth.component.ts  auth.guard.ts  auth.module.ts  token.interceptor.ts
app/src/app/modules/auth/login/: login.component.html  login.component.ts
app/src/app/modules/auth/register/: register.component.html  register.component.ts
app/src/app/modules/core/header/: header.component.html  header.component.scss  header.component.ts
app/src/app/modules/core/home-view/: home-view.component.html  home-view.component.scss  home-view.component.ts
app/src/app/modules/rate/: rate.module.ts
app/src/app/modules/shared/: shared.module.ts
server/: pyproject.toml
server/src/: db.sqlite3
server/src/auth/: serializers.py  urls.py  views.py
server/src/main/: settings.py  urls.py
server/src/rate/: admin.py  generator.py  models.py  serializers.py  views.py
server/src/rate/migrations/: 0001_initial.py  0002_rate_user.py  0003_rate_floor_rate_price_rate_rooms_rate_year.py  0004_rate_sq.py  0005_alter_rate_price.py
(+5 files in other folders)
